fixed overlap issue with resume button and triangle, resumed scrollAni and set iteration-count to 5 and converted scrollAni to Hashlink which on click smooth scrolls to #work

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -21,3 +21,13 @@ $main: #edf2f4;
     margin-right: 20px;
   }
 }
+
+@media only screen and (max-width: 375px) {
+  .customButton {
+    &.resumeButton {
+      background: #8d99ae;
+      color: $main;
+      border-color: #8d99ae;
+    }
+  }
+}
